add token after register
